syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.test";
option java_multiple_files = true;

option (scalapb.options) = {
  flat_package: true
};

import "scalapb/scalapb.proto";

import "api/update.proto";
import "rpc/misc.proto";

service TestService {
    rpc CheckAuth (RequestCheckAuth) returns (ResponseVoid);
    rpc SendUpdate (RequestSendUpdate) returns (ResponseVoid);
}

message RequestCheckAuth {
}

message RequestSendUpdate {
    im.ghasedak.api.ApiUpdateContainer update_container = 1;
}